# saumeomeo

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  example.sh  pyproject.toml  run.py
.cursor/commands/: commit.md
.github/workflows/: deploy-docker.yml
agent/: embedding.py  llm.py  memory.py  tool.py
cookies/: youtube.txt
core/: audio.py  bot.py  controller.py  database.py  state.py  utils.py  view.py
