[project]
name = "saumeomeo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "discord>=2.3.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.0",
    "langchain-localai>=1.0.0",
    "langchain-openai>=1.1.4",
    "llama-cpp-python>=0.3.16",
    "numpy>=1.26.0",
    "pynacl>=1.6.1",
    "python-dotenv>=1.2.1",
    "yt-dlp>=2025.12.8",
]
